# pdf-online

./: .gitignore  404.html  README.md  build_windows.bat  electron-builder.config.json  electron.vite.config.ts  index.html  index.html.br  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  tsconfig.node.json  vite.config.ts
.agents/: AGENTS.md  hooks.json
.github/: copilot-instructions.md
assets/: AboutPage--Ll5wULW.js  AboutPage--Ll5wULW.js.br  AboutPage--Ll5wULW.js.map  AboutPage-7NYNovgU.js  AboutPage-7NYNovgU.js.br  AboutPage-7NYNovgU.js.map  AboutPage-B27zSMqG.js  AboutPage-B27zSMqG.js.br  AboutPage-B27zSMqG.js.map  AboutPage-BKoZzQoo.js  AboutPage-BKoZzQoo.js.br  AboutPage-BKoZzQoo.js.map  AboutPage-Bk0niXmo.js  AboutPage-Bk0niXmo.js.br  AboutPage-C7T-Syvy.js  AboutPage-C7T-Syvy.js.br  AboutPage-C7T-Syvy.js.map  AboutPage-CQmr79pW.js  AboutPage-CQmr79pW.js.br  AboutPage-CQmr79pW.js.map  AboutPage-CSbuhdCs.js  AboutPage-CSbuhdCs.js.br  AboutPage-CSbuhdCs.js.map  AboutPage-DOjrNR5I.js  AboutPage-DOjrNR5I.js.br  AboutPage-DOjrNR5I.js.map  AboutPage-DXP7sRJr.js  AboutPage-DXP7sRJr.js.br  AboutPage-DqIXLwJS.js  AboutPage-DqIXLwJS.js.br  AboutPage-DqIXLwJS.js.map  AboutPage-DvStAUaB.js  AboutPage-DvStAUaB.js.br  AboutPage-DvStAUaB.js.map  HowItWorksPage-6joIIryq.js  HowItWorksPage-6joIIryq.js.br  HowItWorksPage-B1rmO2vt.js  HowItWorksPage-B1rmO2vt.js.br  HowItWorksPage-B1rmO2vt.js.map  HowItWorksPage-BPUawMh7.js  (+462 more)
docs/: windows-store.md
electron/: electron-env.d.ts  main.cts  main.ts  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+137 files in other folders)
