[package]
name = "pdf-online"
version = "1.0.0"
description = "A pdf App"
authors = ["Pratik Singh Lad"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
